--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.knoldus</groupId>
+    <groupId>com.nashtech</groupId>
     <artifactId>gcsProject</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -12,36 +12,37 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <beam.version>2.56.0</beam.version>
     </properties>
 
     <dependencies>
     <dependency>
         <groupId>org.apache.beam</groupId>
         <artifactId>beam-sdks-java-core</artifactId>
-        <version>2.56.0</version>
+        <version>${beam.version}</version>
     </dependency>
     <dependency>
         <groupId>org.apache.beam</groupId>
         <artifactId>beam-sdks-java-io-rrio</artifactId>
-        <version>2.56.0</version>
+        <version>${beam.version}</version>
     </dependency>
         <dependency>
             <groupId>org.apache.beam</groupId>
             <artifactId>beam-runners-direct-java</artifactId>
-            <version>2.56.0</version>
+            <version>${beam.version}</version>
             <scope>runtime</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.beam</groupId>
             <artifactId>beam-sdks-java-extensions-avro</artifactId>
-            <version>2.56.0</version>
+            <version>${beam.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.beam/beam-sdks-java-io-google-cloud-platform -->
         <dependency>
             <groupId>org.apache.beam</groupId>
             <artifactId>beam-sdks-java-io-google-cloud-platform</artifactId>
-            <version>2.56.0</version>
+            <version>${beam.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
